[package]
name = "lambda_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-secretsmanager = "0.19.0"
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

run_test_async = { git = "https://github.com/kano1101/run_test_async.git" }
dotenv = "0.15.0"
thiserror = "1.0.38"
anyhow = "1.0.68"

[lib]
doctest = false
